# xash-renderer-remake

./: .gitignore  CMakeLists.txt
assets/shaders/: compiled_shader.bat
include/: library.h  ref_vk.h
include/common/: CDevice.h  CSwapChain.h  CTools.h  Typedef.h  VulkanAppBase.h  VulkanDebug.h  typedef.h
src/: library.cpp  ref_vk.cpp
src/common/: CDevice.cpp  CSwapChain.cpp  CTools.cpp  VulkanAppBase.cpp  VulkanDebug.cpp
test/: test01.cpp
